examples/test/testpolicy10105.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10105
  namespace: namespace276
spec:
  podSelector:
    matchLabels:
      key47: value1
      key19: value48
      key49: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value0
          key38: value35
          key43: value23
      podSelector:
        matchLabels:
          key0: value19
          key22: value42
